[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/Characters/Enemies/Bosses/Necromancer.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemies/Boss/Necromancer/MiniNecromancer.gd" type="Script" id=2]
[ext_resource path="res://assets/imgs/hp-bar-bg-small.png" type="Texture" id=3]
[ext_resource path="res://sfx/shade2.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/shade14.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/imgs/hp-bar-prog-small.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 12 )

[sub_resource type="Animation" id=2]
length = 0.001

[sub_resource type="Animation" id=3]
resource_name = "attack"
step = 0.0714286
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0714286, 0.142857, 0.214286, 0.285714, 0.357143, 0.428571, 0.5, 0.571429, 0.642857, 0.714286, 0.785714, 0.857143 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.357143, 0.928571 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ null ],
"method": "_cm_cast_spell"
}, {
"args": [  ],
"method": "_cm_finish_attack"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 102, 103, 104, 105, 106, 107, 108, 109, 110 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_cm_finish_dead"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "hurt"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 85, 86, 87, 86, 87, 88, 89 ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
loop = true
step = 0.0625
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0625, 0.1875, 0.3125, 0.4375, 0.5625, 0.6875, 0.8125, 0.9375 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "idle"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=22]
states/attack/node = SubResource( 20 )
states/attack/position = Vector2( 572, 198 )
states/dead/node = SubResource( 21 )
states/dead/position = Vector2( 207, 180 )
states/hurt/node = SubResource( 9 )
states/hurt/position = Vector2( 367, 76 )
states/idle/node = SubResource( 10 )
states/idle/position = Vector2( 109, 71 )
transitions = [ "idle", "hurt", SubResource( 11 ), "hurt", "idle", SubResource( 12 ), "idle", "dead", SubResource( 13 ), "attack", "dead", SubResource( 14 ), "hurt", "dead", SubResource( 15 ), "hurt", "attack", SubResource( 16 ), "attack", "hurt", SubResource( 17 ), "idle", "attack", SubResource( 18 ), "attack", "idle", SubResource( 19 ) ]
start_node = "idle"
end_node = "dead"

[sub_resource type="AnimationNodeStateMachinePlayback" id=23]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 13.3333, 22.3333 )

[node name="MiniNecromancer" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.2 )
collision_layer = 2
collision_mask = 528
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5.96046e-08, -2.38419e-07 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -3.8147e-06, -26.5333 )
scale = Vector2( 0.816667, 0.835417 )
texture = ExtResource( 1 )
hframes = 17
vframes = 7
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/dead = SubResource( 6 )
anims/hurt = SubResource( 7 )
anims/idle = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 22 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 23 )

[node name="SwordHurt01" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
pitch_scale = 0.8

[node name="SwordHurt02" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="Rays" type="Node2D" parent="."]

[node name="D_back" type="RayCast2D" parent="Rays"]
enabled = true
cast_to = Vector2( -213.333, 106.667 )

[node name="Back" type="RayCast2D" parent="Rays"]
enabled = true
cast_to = Vector2( -213.333, 0 )

[node name="Front" type="RayCast2D" parent="Rays"]
enabled = true
cast_to = Vector2( 293.333, 0 )

[node name="D_front" type="RayCast2D" parent="Rays"]
enabled = true
cast_to = Vector2( 261.333, 113.333 )

[node name="Down" type="RayCast2D" parent="Rays"]
enabled = true
cast_to = Vector2( 0, 93.3333 )

[node name="HPbar" type="TextureProgress" parent="."]
margin_left = -5.33333
margin_top = -26.6667
margin_right = 13.6667
margin_bottom = -24.6667
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true

[node name="DeadArea" type="Area2D" parent="." groups=["EnemiesDefense"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadArea"]
position = Vector2( 2.66667, -4.33333 )
shape = SubResource( 24 )

[connection signal="area_entered" from="DeadArea" to="." method="_on_DeadArea_area_entered"]
